--- a/package.json
+++ b/package.json
@@ -11,15 +11,24 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~9.0.5",
+    "@angular/animations": "^9.0.7",
+    "@angular/cdk": "^9.1.3",
     "@angular/common": "~9.0.5",
     "@angular/compiler": "~9.0.5",
     "@angular/core": "~9.0.5",
     "@angular/forms": "~9.0.5",
+    "@angular/material": "^9.1.3",
     "@angular/platform-browser": "~9.0.5",
     "@angular/platform-browser-dynamic": "~9.0.5",
     "@angular/router": "~9.0.5",
+    "@ngrx/effects": "^9.0.0",
+    "@ngrx/store": "^9.0.0",
+    "bootstrap": "^4.4.1",
+    "jquery": "^3.4.1",
+    "ngx-toastr": "^12.0.0",
+    "popper.js": "^1.16.1",
     "rxjs": "~6.5.4",
+    "sweetalert2": "^9.10.6",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
