--- a/src/assets/data/applicationOnboarding.json
+++ b/src/assets/data/applicationOnboarding.json
@@ -1,94 +1,164 @@
 {
-  "applicationData": [
+  "data": [
     {
-      "name": "DEV Application",
-      "description": "Application is created for dev environment",
-      "status": "ACTIVE"
+      "status": "ACTIVE",
+      "description": "admiral",
+      "name": "admiral"
     },
     {
-      "name": "Test Application",
-      "description": "Test Application is use to test in prod env.",
-      "status": "ACTIVE"
+      "status": "ACTIVE",
+      "description": "algartest",
+      "name": "algartest"
     },
     {
-      "name": "DemoElasticCredentials",
-      "description": "http://35.228.154.59:9200",
-      "status": "INACTIVE"
+      "status": "ACTIVE",
+      "description": "bookmarks",
+      "name": "bookmarks"
     },
     {
-      "name": "DemoApplication",
-      "description": "http://af15dd0d3db8e11e9b49",
-      "status": "INACTIVE"
+      "status": "ACTIVE",
+      "description": "demoapplicaton",
+      "name": "demoapplicaton"
     },
     {
-      "name": "ElasticCredentials",
-      "description": "http://35.228.154.59:9200",
-      "status": "ACTIVE"
+      "status": "ACTIVE",
+      "description": "demoappoes",
+      "name": "demoappoes"
     },
     {
-      "name": "prometheus",
-      "description": "http://af15dd0d3db8e11e9b49",
-      "status": "INACTIVE"
+      "status": "ACTIVE",
+      "description": "dvrtest",
+      "name": "dvrtest"
     },
     {
-      "name": "DEV Application",
-      "description": "Application is created for dev environment",
-      "status": "ACTIVE"
+      "status": "ACTIVE",
+      "description": "ecsapp",
+      "name": "ecsapp"
     },
     {
-      "name": "Test Application",
-      "description": "Test Application is use to test in prod env.",
-      "status": "ACTIVE"
+      "status": "ACTIVE",
+      "description": "ekscluster",
+      "name": "ekscluster"
     },
     {
-      "name": "DemoElasticCredentials",
-      "description": "http://35.228.154.59:9200",
-      "status": "INACTIVE"
+      "status": "ACTIVE",
+      "description": "eksdemo",
+      "name": "eksdemo"
     },
     {
-      "name": "DemoApplication",
-      "description": "http://af15dd0d3db8e11e9b49",
-      "status": "INACTIVE"
+      "status": "ACTIVE",
+      "description": "eksistiodemo",
+      "name": "eksistiodemo"
     },
     {
-      "name": "ElasticCredentials",
-      "description": "http://35.228.154.59:9200",
-      "status": "ACTIVE"
+      "status": "ACTIVE",
+      "description": "istiodemo",
+      "name": "istiodemo"
     },
     {
-      "name": "prometheus",
-      "description": "http://af15dd0d3db8e11e9b49",
-      "status": "INACTIVE"
+      "status": "ACTIVE",
+      "description": "jenkinsbranch",
+      "name": "jenkinsbranch"
     },
     {
-      "name": "DEV Application",
-      "description": "Application is created for dev environment",
-      "status": "ACTIVE"
+      "status": "ACTIVE",
+      "description": "kayantaapp",
+      "name": "kayantaapp"
     },
     {
-      "name": "Test Application",
-      "description": "Test Application is use to test in prod env.",
-      "status": "ACTIVE"
+      "status": "ACTIVE",
+      "description": "kirantest",
+      "name": "kirantest"
     },
     {
-      "name": "DemoElasticCredentials",
-      "description": "http://35.228.154.59:9200",
-      "status": "INACTIVE"
+      "status": "ACTIVE",
+      "description": "kubedemo",
+      "name": "kubedemo"
     },
     {
-      "name": "DemoApplication",
-      "description": "http://af15dd0d3db8e11e9b49",
-      "status": "INACTIVE"
+      "status": "ACTIVE",
+      "description": "multiclouddemo",
+      "name": "multiclouddemo"
     },
     {
-      "name": "ElasticCredentials",
-      "description": "http://35.228.154.59:9200",
-      "status": "ACTIVE"
+      "status": "ACTIVE",
+      "description": "myawsdemo",
+      "name": "myawsdemo"
     },
     {
-      "name": "prometheus",
-      "description": "http://af15dd0d3db8e11e9b49",
-      "status": "INACTIVE"
+      "status": "ACTIVE",
+      "description": "mygcpdemo",
+      "name": "mygcpdemo"
+    },
+    {
+      "status": "ACTIVE",
+      "description": "occluster",
+      "name": "occluster"
+    },
+    {
+      "status": "ACTIVE",
+      "description": "oesdemo",
+      "name": "oesdemo"
+    },
+    {
+      "status": "ACTIVE",
+      "description": "opsmx",
+      "name": "opsmx"
+    },
+    {
+      "status": "ACTIVE",
+      "description": "opsmxkayntapp",
+      "name": "opsmxkayntapp"
+    },
+    {
+      "status": "ACTIVE",
+      "description": "productpage",
+      "name": "productpage"
+    },
+    {
+      "status": "ACTIVE",
+      "description": "ptapp",
+      "name": "ptapp"
+    },
+    {
+      "status": "ACTIVE",
+      "description": "sample",
+      "name": "sample"
+    },
+    {
+      "status": "ACTIVE",
+      "description": "scaletest",
+      "name": "scaletest"
+    },
+    {
+      "status": "ACTIVE",
+      "description": "sudhakartest",
+      "name": "sudhakartest"
+    },
+    {
+      "status": "ACTIVE",
+      "description": "terraformdemo",
+      "name": "terraformdemo"
+    },
+    {
+      "status": "ACTIVE",
+      "description": "terraspin",
+      "name": "terraspin"
+    },
+    {
+      "status": "ACTIVE",
+      "description": "testapp2",
+      "name": "testapp2"
+    },
+    {
+      "status": "ACTIVE",
+      "description": "testpipeline",
+      "name": "testpipeline"
+    },
+    {
+      "status": "NEW",
+      "description": "wef3",
+      "name": "24ef"
     }
   ]
 }
