--- a/angular.json
+++ b/angular.json
@@ -28,7 +28,7 @@
               "src/assets"
             ],
             "styles": [
-              //"./node_modules/@angular/material/prebuilt-themes/purple-green.css",
+              "./node_modules/@angular/material/prebuilt-themes/purple-green.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "node_modules/ngx-toastr/toastr.css",
               "src/styles.less"
