--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "ngx-toastr": "^12.0.0",
     "popper.js": "^1.16.1",
     "rxjs": "~6.5.4",
+    "saturn-datepicker": "^8.0.5",
     "sweetalert2": "^9.10.6",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
