--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ngrx/store": "^9.0.0",
     "bootstrap": "^4.4.1",
     "jquery": "^3.4.1",
+    "ng-multiselect-dropdown": "^0.2.10",
     "ng2-search-filter": "^0.5.1",
     "ngx-toastr": "^12.0.0",
     "popper.js": "^1.16.1",
