Changes related to 1. Overall application health chart 2. Active pipelines bar chart 3. Automated verification pie chart

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "~9.0.5",
     "@ngrx/effects": "^9.0.0",
     "@ngrx/store": "^9.0.0",
+    "@swimlane/ngx-charts": "^14.0.0",
     "bootstrap": "^4.4.1",
     "jquery": "^3.4.1",
     "ng-multiselect-dropdown": "^0.2.10",
