--- a/src/assets/config/app-config.json
+++ b/src/assets/config/app-config.json
@@ -1,5 +1,5 @@
 {
     "baseUrl":"https://137.117.94.95:8090/",
     "endPointUrl":"http://137.117.94.95:8084/",
-    "autoPilotEndPointUrl":"http://40.78.28.87:8090/"
+    "autoPilotEndPointUrl":"https://40.78.28.87:9094/"
 }
