modified endpoints for oes and displaying default services

--- a/src/assets/config/app-config.json
+++ b/src/assets/config/app-config.json
@@ -1,7 +1,6 @@
 {
     "baseUrl":"https://137.117.94.95:8090/",
-    "endPointUrl":"http://137.117.94.95:8084/",
+    "endPointUrl":"http://52.165.24.107:8084/",
     "autoPilotEndPointUrl":"https://40.78.28.87:9094/",
-    "plartFormEndPoint": "http://52.165.24.107:8084/",
-    "platFormEndPointUrl": "http://52.165.24.107:8095/"
+    "plartFormEndPoint": "http://52.165.24.107:8084/"
 }
