--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "@ngrx/store": "^9.0.0",
     "@swimlane/ngx-charts": "^14.0.0",
     "@swimlane/ngx-graph": "^7.1.1",
+    "ang-jsoneditor": "^1.10.0",
     "bootstrap": "^4.4.1",
     "jquery": "^3.4.1",
+    "jsoneditor": "^9.0.4",
     "ng-multiselect-dropdown": "^0.2.10",
     "ng2-search-filter": "^0.5.1",
     "ngx-toastr": "^12.0.0",
