bubble chart implementation

--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "@swimlane/ngx-charts": "^14.0.0",
     "@swimlane/ngx-graph": "^7.1.1",
     "ang-jsoneditor": "^1.10.0",
+    "angular-fusioncharts": "^3.0.4",
     "bootstrap": "^4.4.1",
+    "fusioncharts": "^3.15.2",
     "jquery": "^3.4.1",
     "jsoneditor": "^9.0.4",
     "ng-multiselect-dropdown": "^0.2.10",
