--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "jsoneditor": "^9.0.4",
     "ng-multiselect-dropdown": "^0.2.10",
     "ng2-search-filter": "^0.5.1",
+    "ngp-sort-pipe": "0.0.4",
     "ngx-toastr": "^12.0.0",
     "popper.js": "^1.16.1",
     "rxjs": "~6.5.4",
