--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "ng-multiselect-dropdown": "^0.2.10",
     "ng2-search-filter": "^0.5.1",
     "ngp-sort-pipe": "0.0.4",
+    "ngx-clipboard": "^13.0.1",
     "ngx-toastr": "^12.0.0",
     "popper.js": "^1.16.1",
     "rxjs": "~6.5.4",
