Metric Template - bug fixes

--- a/src/assets/config/app-config.json
+++ b/src/assets/config/app-config.json
@@ -1,4 +1,4 @@
 {
-    "endPointUrl":"http://autopilot-master-gate.engineering.opsmx.net/",
+    "endPointUrl":"http://autopilot-gate.engineering.opsmx.net/",
     "setApplicationInterval": 16000
 }
