Changes for the visibility screen updated

--- a/src/assets/data/visibility/approvalGateInstances.json
+++ b/src/assets/data/visibility/approvalGateInstances.json
@@ -21,7 +21,7 @@
     "approvalGateId": 1,
     "approvalGateName": "Production Gate3",
     "approvalGateInstanceId": 1,
-    "status": "Pending"
+    "status": "Rejected"
   },
   {
     "serviceId": 4,
