--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-material-components/datetime-picker": "^2.0.4",
+    "@angular-material-components/moment-adapter": "^2.0.1",
     "@angular/animations": "^9.0.7",
     "@angular/cdk": "^9.1.3",
     "@angular/common": "~9.0.5",
@@ -42,7 +44,8 @@
     "saturn-datepicker": "^8.0.5",
     "sweetalert2": "^9.10.6",
     "tslib": "^1.10.0",
-    "zone.js": "~0.10.2"
+    "zone.js": "~0.10.2",
+    "moment": "~2.24.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.900.5",
