--- a/package.json
+++ b/package.json
@@ -30,9 +30,10 @@
     "ang-jsoneditor": "^1.10.0",
     "angular-fusioncharts": "^3.0.4",
     "bootstrap": "^4.4.1",
-    "fusioncharts": "^3.15.2",
+    "fusioncharts": "^3.15.3",
     "jquery": "^3.4.1",
     "jsoneditor": "^9.0.4",
+    "moment": "~2.24.0",
     "ng-multiselect-dropdown": "^0.2.10",
     "ng2-search-filter": "^0.5.1",
     "ngp-sort-pipe": "0.0.4",
@@ -44,8 +45,7 @@
     "saturn-datepicker": "^8.0.5",
     "sweetalert2": "^9.10.6",
     "tslib": "^1.10.0",
-    "zone.js": "~0.10.2",
-    "moment": "~2.24.0"
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.900.5",
