--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "ngp-sort-pipe": "0.0.4",
     "ngx-bootstrap": "^6.1.0",
     "ngx-clipboard": "^13.0.1",
+    "ngx-json-viewer": "^2.4.0",
     "ngx-toastr": "^12.0.0",
     "popper.js": "^1.16.1",
     "rxjs": "~6.5.4",
