--- a/src/assets/config/app-config.json
+++ b/src/assets/config/app-config.json
@@ -1,4 +1,4 @@
 {
-    "endPointUrl":"http://oes-visibility-gate.engineering.opsmx.net/",
+    "endPointUrl":"http://oes-master-gate.engineering.opsmx.net/",
     "setApplicationInterval": 300000
 }
