--- a/package.json
+++ b/package.json
@@ -33,9 +33,9 @@
     "@swimlane/ngx-charts": "^14.0.0",
     "@swimlane/ngx-graph": "^7.1.1",
     "ang-jsoneditor": "^1.10.0",
-    "angular-fusioncharts": "^3.0.4",
+    "angular-fusioncharts": "3.0.4",
     "bootstrap": "^4.4.1",
-    "fusioncharts": "^3.15.3",
+    "fusioncharts": "3.15.3",
     "jquery": "^3.4.1",
     "jsoneditor": "^9.0.4",
     "moment": "~2.24.0",
